--- a/contribution/classsss.html
+++ b/contribution/classsss.html
@@ -17,7 +17,8 @@
 <div class="cities">
   <h2>London</h2>
   <p>London is the capital of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  <p>Standing on the River Thames, London has been a major settlement for two millennia, It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <p>Standing on the River Thames,its history going back to its founding by the Romans, who named it Londinium.</p>
 </div> 
 
 </body>
